# qlm

./: .gitignore  Cargo.toml  Dockerfile.orchestrator  Dockerfile.playground  Dockerfile.worker  Makefile  README.md  compose.yaml  config.json  docker-compose.yaml
core/: Dockerfile.worker  common.go  go.mod  go.sum
core/ollamable/: ollamable.go
core/orchestrator/: orchestrator.go
core/worker/: worker.go
front_end/: package-lock.json  package.json
front_end/app/: page.tsx
front_end/app/api/hook/: route.ts
front_end/app/api/msg/: route.ts
playground/: go.mod  playground.go
playground/ui/: index.html
playground/ui/css/: index.css
playground/ui/js/: index.js
src/: Dockerfile.orchestrator  Dockerfile.worker  common.go  go.mod  go.sum  lib.rs  worker.supervisor.toml
src/ollama/: chat.rs  common.rs  completion.rs  generate.rs  mod.rs  ollama.go  ollama_test.go
src/ollamable/: ollamable.go
src/orchestrator/: mod.rs  request.rs  response.rs  state.rs  worker.rs
src/receive/: receive.go
src/send/: send.go
src/ws-server/: ws-server.go
