[package]
name = "prem-lm"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "worker"
path = "bin/worker.rs"

[[bin]]
name = "orchestrator"
path = "bin/orchestrator.rs"


[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
axum-macros = "0.5.0"
futures = "0.3.31"
